:memo: docs(1.0): 完成第二章和第三章的翻译
refs #2

Signed-off-by: Tony Deng <wolf.deng@gmail.com>

--- a/section-1/1.1.md
+++ b/section-1/1.1.md
@@ -1,4 +1,4 @@
-# RFC 6020的变化摘要
+# 1.1. RFC 6020的变化摘要
 
 这个文件定义了`YANG`语言的版本1.1。 `YANG`版本1.1是`YANG`语言的维护版本，解决了原始规范[RFC6020](https://tools.ietf.org/html/rfc6020)中的模糊性和缺陷。
 
