:memo: docs(1.0): 完成4.2.7和4.2.8节翻译
refs #8

Signed-off-by: Tony Deng <wolf.deng@gmail.com>

--- a/section-4/4.2.3.md
+++ b/section-4/4.2.3.md
@@ -1,4 +1,4 @@
-# 4.2.3. 配置和状态数据
+# 4.2.3. 配置和状态数据(`Configuration and State Data`)
 
 `YANG`可以根据“`config`”语句为状态数据和配置数据建模。 当一个节点被标记为“`config false`”时，其子层被标记为状态数据。 如果标记为“`config true`”，则其子层被标记为配置数据。 报告父容器，列表和关键叶子，给出状态数据的上下文。
 
