--- a/section-4/4.2.5.md
+++ b/section-4/4.2.5.md
@@ -1,4 +1,4 @@
-# 4.2.5.  派生类型（typedef）
+# 4.2.5.  派生类型（typedef）(`Derived Types (typedef)`)
 
 `YANG`可以使用“`typedef`”语句从基本类型定义派生类型。 基本类型可以是内置类型或派生类型，允许派生类型的层次结构。
 
