:memo: docs(1.0): 完成7.7节“叶列表”声明的翻译
refs #12

Signed-off-by: Tony Deng <wolf.deng@gmail.com>

--- a/section-7/7.7.md
+++ b/section-7/7.7.md
@@ -20,11 +20,11 @@
 
 `YANG`在`NETCONF`的`<edit-config>`操作中提供了丰富的功能，可以控制用户排序列表中列表条目的顺序。列表条目可以被插入或重新排列，被定位为列表中的第一个或最后一个条目，或被定位在另一个特定条目之前或之后。
 
-[7.7.7节](7.7.md#)介绍了“`ordered-by`”语句。
+[7.7.7节](7.7.md#777-排序声明)介绍了“`ordered-by`”语句。
 
 ## 7.7.2. 叶列表的默认值
 
-如果数据树中不存在叶子列表，则叶子列表的缺省值是服务器使用的值。缺省值的使用取决于架构树中不是无状态容器的叶节点最近的祖先节点（参见[7.5.1节](7.5.md#751-容器的存在)）：
+如果数据树中不存在叶列表，则叶列表的缺省值是服务器使用的值。缺省值的使用取决于架构树中不是无状态容器的叶节点最近的祖先节点（参见[7.5.1节](7.5.md#751-容器的存在)）：
 
 - 如果模式树中不存在这样的祖先，则必须使用默认值。
 
@@ -34,11 +34,11 @@
 
 在这些情况下，默认值被认为正在使用中。
 
-请注意，如果叶子列表或其任何祖先具有“​​`when`”条件或“`if-feature`”表达式的计算结果为“`false`”，则默认值不会被使用。
+请注意，如果叶列表或其任何祖先具有“​​`when`”条件或“`if-feature`”表达式的计算结果为“`false`”，则默认值不会被使用。
 
 当使用默认值时，服务器必须在操作上表现得像数据树中存在的叶表一样，其默认值是其值。
 
-如果叶列表具有一个或多个“`default`”语句，叶列表的默认值是“`default`”语句的值，并且如果叶列表是用户排序的，则默认值按照“`default`”语句。否则，如果叶列表的类型有一个默认值，并且叶列表没有一个值大于或等于1的“`min-elements`”语句，那么叶列表的默认值是该类型的一个实例默认值。在所有其他情况下，叶子列表没有任何默认值。
+如果叶列表具有一个或多个“`default`”语句，叶列表的默认值是“`default`”语句的值，并且如果叶列表是用户排序的，则默认值按照“`default`”语句。否则，如果叶列表的类型有一个默认值，并且叶列表没有一个值大于或等于1的“`min-elements`”语句，那么叶列表的默认值是该类型的一个实例默认值。在所有其他情况下，叶列表没有任何默认值。
 
 ## 7.7.3. `leaf-list`子语句
 
@@ -72,11 +72,11 @@
 
 ## 7.7.5. “最小元素”声明
 
-“`min-elements`”语句是可选的，它将一个非负整数作为参数，对有效列表条目进行约束。 一个有效的叶子列表或者列表必须至少有`min`元素条目。
+“`min-elements`”语句是可选的，它将一个非负整数作为参数，对有效列表条目进行约束。 一个有效的叶列表或者列表必须至少有`min`元素条目。
 
 如果不存在“`min-elements`”语句，则默认为零。
 
-约束的行为取决于模式树中叶子列表或列表最近的祖先节点的类型，它不是一个不存在的容器（见[7.5.1节](7.5.md#751-容器的存在)）：
+约束的行为取决于模式树中叶列表或列表最近的祖先节点的类型，它不是一个不存在的容器（见[7.5.1节](7.5.md#751-容器的存在)）：
 
 - 如果模式树中不存在这样的祖先，则强制约束。
 
@@ -85,3 +85,138 @@
 - 否则，如果祖先节点存在，则强制执行。
 
 根据[第8节](../section-8/README.md)的规定，约束条件得到了进一步的执行。
+
+## 7.7.6. “最大元素”声明
+
+“`max-elements`”语句是可选的，它将一个正整数或字符串“`unbounded`”作为参数，对有效的列表条目进行约束。一个有效的叶列表或列表总是至多有最大元素条目。
+
+如果不存在“`max-elements`”语句，则默认为“`unbounded`”。
+
+“最大元素”约束按照[第8节](../section-8/README.md)的规定执行。
+
+## 7.7.7. “排序”声明
+
+“ordered-by”语句定义列表中的条目顺序是由用户还是系统确定的。 参数是字符串“`system`”或“`user`”之一。 如果不存在，则默认为“`system`”。
+
+如果列表代表状态数据，`RPC`输出参数或通知内容，则该语句将被忽略。
+
+更多信息见[7.7.1](7.7.md#771-排序)节。
+
+### 7.7.7.1. 基于系统的排序
+
+列表中的条目按照系统确定的顺序排序。 列表的“`description`”字符串可能会向服务器实现者建议一个命令。如果没有，则可以按照任何顺序自由地对条目进行排序。一个实现应该使用相同的顺序来处理相同的数据，而不管数据是如何创建的。使用确定性顺序将使用简单工具（比如“`diff`”）进行比较。
+
+这是默认的顺序。
+
+### 7.7.7.2. 基于用户的排序
+
+列表中的条目按照用户定义的顺序排序。在`NETCONF`中，这个顺序是通过在`<edit-config>`请求中使用特殊的`XML`属性来控制的。细节见[7.7.9节](7.7.md#779-NETCONF-edit-config操作)。
+
+## 7.7.8. XML编码规则
+
+叶列表节点被编码为一系列`XML`元素。 每个元素的本地名称是叶列表的标识符，其名称空间是模块的`XML`名称空间（参见[第7.1.3节](7.1.md#713-namespace声明)）。
+
+每个叶列表项的值根据类型被编码为`XML`，并作为元素中的字符数据被发送。
+
+如果叶列表是“`ordered-by user`”，则表示叶列表项的`XML`元素必须以用户指定的顺序出现; 否则，顺序依赖于实现。 表示叶列表项的`XML`元素可以与叶列表的同级元素交织，除非叶列表定义了`RPC`或动作输入(`action input`)或输出参数(`output parameters`)。
+
+参见[7.7.10节](7.7.md#7710-使用示例)的例子。
+
+## 7.7.9. `NETCONF` `<edit-config>`操作
+
+叶列表条目可以通过使用叶列表条目的XML元素中的“`operation`”属性，通过`<edit-config>`创建和删除，但不能修改。
+
+在“`ordered-by user`”的叶列表中，`YANG` `XML`命名空间（[第5.3.1节](../section-5/5.3.1.md)）中的属性“`insert`”和“`value`”可以用来控制叶列表中插入条目的位置。这些可以在“`create`”操作期间用于插入新的叶列表条目，或者在“`merge`”或“`replace`”操作期间插入新的叶列表条目或移动现有的叶列表条目。
+
+“`insert`”属性可以取值“`first`”，“`last`”，“`before`”和“`after`”。如果值是“`before`”或“`after`”，那么“`value`”属性也必须用于指定叶列表中的现有条目。
+
+如果在“`create`”操作中没有“`insert`”属性，则默认为“`last`”。
+
+如果在“`ordered-by user`”叶列表中的几个条目在同一个`<edit-config>`请求中被修改，则按照请求中的`XML`元素的顺序一次修改一个条目。
+
+在具有覆盖整个叶列表的“`merge`”操作的`<copy-config>`或`<edit-config>`中，叶列表顺序与请求中XML元素的顺序相同。
+
+当一个`NETCONF`服务器处理一个`<edit-config>`请求时，叶列表节点的过程元素如下：
+
+- 如果操作是“`merge`”或“`replace`”，则叶列表条目如果不存在则创建。
+
+- 如果操作是“`create`”，则创建叶列表条目（如果不存在）。如果叶列表项已经存在，则返回“`data-exists`”错误。
+
+- 如果操作是“`delete`”，则从叶列表中删除条目（如果存在）。如果叶列表项不存在，则返回“`data-missing`”错误。
+
+## 7.7.10. 使用示例
+
+```YANG
+leaf-list allow-user {
+  type string;
+  description
+    "A list of user name patterns to allow.";
+}
+```
+
+相应的`XML`实例示例：
+
+```xml
+<allow-user>alice</allow-user>
+<allow-user>bob</allow-user>
+```
+
+要在此列表中创建一个新元素，请使用默认的`<edit-config>`操作“`merge`”：
+
+```xml
+<rpc message-id="101"
+     xmlns="urn:ietf:params:xml:ns:netconf:base:1.0"
+     xmlns:nc="urn:ietf:params:xml:ns:netconf:base:1.0">
+  <edit-config>
+    <target>
+      <running/>
+    </target>
+    <config>
+      <system xmlns="urn:example:config">
+        <services>
+          <ssh>
+            <allow-user>eric</allow-user>
+          </ssh>
+        </services>
+      </system>
+    </config>
+  </edit-config>
+</rpc>
+```
+
+给出以下按用户排序的列表：
+
+```YANG
+leaf-list cipher {
+  type string;
+  ordered-by user;
+  description
+    "A list of ciphers.";
+}
+```
+
+以下将被用于在“`3des-cbc`”之后插入新的密码“`blowfish-cbc`”：
+
+```xml
+<rpc message-id="102"
+     xmlns="urn:ietf:params:xml:ns:netconf:base:1.0"
+     xmlns:nc="urn:ietf:params:xml:ns:netconf:base:1.0"
+     xmlns:yang="urn:ietf:params:xml:ns:yang:1">
+  <edit-config>
+    <target>
+      <running/>
+    </target>
+    <config>
+      <system xmlns="urn:example:config">
+        <services>
+          <ssh>
+            <cipher nc:operation="create"
+                    yang:insert="after"
+                    yang:value="3des-cbc">blowfish-cbc</cipher>
+          </ssh>
+        </services>
+      </system>
+    </config>
+  </edit-config>
+</rpc>
+```
