:bug:fix(1.0): 调整文档中子语言为子语句
refs #16

Signed-off-by: Tony Deng <wolf.deng@gmail.com>

--- a/section-7/7.11.md
+++ b/section-7/7.11.md
@@ -12,7 +12,7 @@
 
 应该指出的是，在`YANG`版本`1`中，“`anyxml`”是唯一可以模拟未知数据层次的声明。在很多情况下，这个未知的数据层次实际上是在`YANG`中建模的，但具体的`YANG`数据模型在设计时并不知道。在这些情况下，建议使用“`anydata`”（[第7.10节](7.10.md)）而不是“`anyxml`”。
 
-## 7.11.1. `anyxml`子语言
+## 7.11.1. `anyxml`子语句
 
 ```
 +--------------+---------+-------------+
