--- a/section-7/7.13.md
+++ b/section-7/7.13.md
@@ -6,7 +6,7 @@
 
 在分组中定义的标识符没有绑定到名称空间，直到分组的内容通过“`uses`”语句添加到模式树中，该语句不出现在“`grouping`”语句中，此时它们被绑定到名称空间的当前模块。
 
-## 7.13.1. `uses`子语言
+## 7.13.1. `uses`子语句
 
 ```
 +--------------+---------+-------------+
