--- a/section-7/7.15.md
+++ b/section-7/7.15.md
@@ -12,7 +12,7 @@
 
 `action`和`rpc`之间的区别在于`action`绑定到数据存储中的节点，而`rpc`不是。当一个`action`被调用时，数据存储中的节点与`action`名称和输入参数一起被指定。
 
-## 7.15.1. `action`子语言
+## 7.15.1. `action`子语句
 
 ```
 +--------------+---------+-------------+
