--- a/section-7/7.17.md
+++ b/section-7/7.17.md
@@ -1,6 +1,6 @@
 # 7.17. “扩充”声明
 
-“`augment`”语句允许模块或子模块添加到在外部模块或当前模块及其子模块中定义的模式树中，并通过“`uses`”语句中的分组添加到节点中。 参数是标识架构树中节点的字符串。 这个节点被称为增广的目标节点。 目标节点必须是`container`，`list`，`choice`，`case`，`input`，`output`或`notification`节点。 随着“`augment`”语句之后的子语言中定义的节点的增加。
+“`augment`”语句允许模块或子模块添加到在外部模块或当前模块及其子模块中定义的模式树中，并通过“`uses`”语句中的分组添加到节点中。 参数是标识架构树中节点的字符串。 这个节点被称为增广的目标节点。 目标节点必须是`container`，`list`，`choice`，`case`，`input`，`output`或`notification`节点。 随着“`augment`”语句之后的子语句中定义的节点的增加。
 
 参数字符串是一个模式节点标识符（参见[第6.5节](section-6/6.5.md)）。如果“`augment`”语句位于模块或子模块的顶层，必须使用模式节点标识符的绝对格式（由[第14节](section-14/README.md)中的规则“`absolute-schema-nodeid`”定义）。如果“`augment`”语句是“`uses`”语句的子语句，则必须使用后代形式（由[第14节](section-14/README.md)中的规则“`descendant-schema-nodeid`”定义）。
 
@@ -40,7 +40,7 @@ module example-augment {
 }
 ```
 
-## 7.17.1. `augment`子语言
+## 7.17.1. `augment`子语句
 
 ```
 +--------------+---------+-------------+
