--- a/section-7/7.2.md
+++ b/section-7/7.2.md
@@ -37,7 +37,7 @@ submodule <module-name> {
 
 ## 7.2.1.  子模块的子语句
 
-> submodule的子语言基本上和`module`的子语言(参见[7.1.1节](7.1.md#711-模块的子语句))一致，只是多了一个`belongs-to`子语言
+> submodule的子语句基本上和`module`的子语句(参见[7.1.1节](7.1.md#711-模块的子语句))一致，只是多了一个`belongs-to`子语句
 
 ```
 +--------------+---------+-------------+
@@ -80,7 +80,7 @@ submodule <module-name> {
 
 强制的“`prefix`”子状态为子模块所属的模块分配一个前缀。 子模块所属模块中的所有定义及其所有子模块都可以使用前缀进行访问。
 
-> "belongs-to"的子语言
+> "belongs-to"的子语句
 
 ```
 +--------------+---------+-------------+
