--- a/section-7/7.20.md
+++ b/section-7/7.20.md
@@ -4,7 +4,7 @@
 
 ## 7.20.1. “`feature`”声明
 
-“`feature`”语句用于定义一个机制，模式的一部分被标记为有条件的。 定义了一个功能名称，稍后可以使用“`if-feature`”语句来引用（参见[第7.20.2节](7.20.md#7202-feature子语言)）。 除非服务器支持给定的特征表达式，否则服务器将忽略使用“`if-feature`”语句标记的模式节点。 这允许`YANG`模块的部分基于服务器中的条件有条件。 该模型可以表示模型中的服务器的能力，给出一个更丰富的模型，允许不同的服务器能力和角色。
+“`feature`”语句用于定义一个机制，模式的一部分被标记为有条件的。 定义了一个功能名称，稍后可以使用“`if-feature`”语句来引用（参见[第7.20.2节](7.20.md#7202-feature子语句)）。 除非服务器支持给定的特征表达式，否则服务器将忽略使用“`if-feature`”语句标记的模式节点。 这允许`YANG`模块的部分基于服务器中的条件有条件。 该模型可以表示模型中的服务器的能力，给出一个更丰富的模型，允许不同的服务器能力和角色。
 
 “`feature`”语句的参数是新特征的名称，并遵循[6.2节](../section-6/6.2.md)中有关标识符的规则。 “`if-feature`”语句使用此名称将模式节点绑定到该功能。
 
@@ -42,7 +42,7 @@ module example-syslog {
 
 为了使服务器支持依赖于任何其他特征的特征（即特征具有一个或多个“`if-feature`”子特征），服务器还必须支持所有从属特征。
 
-### 7.20.1.1. `feature`子语言
+### 7.20.1.1. `feature`子语句
 
 ```
 +--------------+---------+-------------+
@@ -125,7 +125,7 @@ if-feature "(not foo) or (bar and baz)";
 
 参数`“delete`”删除目标节点的属性。要删除的属性由子语句标识为“`delete`”语句。子状态的关键字必须匹配目标节点中相应的关键字，参数的字符串必须等于目标节点中相应的关键字的参数字符串。
 
-> `deviate`的子语言
+> `deviate`的子语句
 
 ```
 +--------------+--------------+-------------+
