--- a/section-7/7.9.md
+++ b/section-7/7.9.md
@@ -2,11 +2,11 @@
 
 “`choice`”语句定义了一组替代品，其中只有一个可能出现在任何一个数据树中。 参数是一个标识符，后面跟着一个包含详细选择信息的子状态块。 该标识符用于标识架构树中的选择节点。 数据树中不存在选择节点。
 
-一个选择由若干分支组成，每个分支都定义一个“`case`”子语言。 每个分支都包含一些子节点。 选择分支中的至多一个节点同时存在。
+一个选择由若干分支组成，每个分支都定义一个“`case`”子语句。 每个分支都包含一些子节点。 选择分支中的至多一个节点同时存在。
 
 由于在数据树中，只有一个选择的情况在任何时候都是有效的，所以从一种情况创建一个节点会隐式地删除所有其他情况下的所有节点。 如果一个请求从一个案例中创建一个节点，服务器将删除在其他情况下定义的所有现有节点。
 
-## 7.9.1. `choice`的子语言
+## 7.9.1. `choice`的子语句
 
 ```
 +--------------+---------+-------------+
@@ -70,7 +70,7 @@ choice interface-type {
 
 `case`标识符在选择中必须是唯一的。
 
-### 7.9.2.1. `case`的子语言
+### 7.9.2.1. `case`的子语句
 
 ```YANG
 +--------------+---------+-------------+
