:memo: docs(1.0): 完成第九章的7-9节翻译
refs #16

Signed-off-by: Tony Deng <wolf.deng@gmail.com>

--- a/section-9/9.6.md
+++ b/section-9/9.6.md
@@ -37,3 +37,91 @@
 | value        | 9.6.4.2 | 0..1        |
 +--------------+---------+-------------+
 ```
+
+### 9.6.4.2. “`value`”声明
+
+“`value`”语句是可选的，用于将整数值与枚举的分配名称相关联。这个整数值必须在`-2147483648`到`2147483647`的范围内，它必须在枚举类型中是唯一的。
+
+如果没有指定值，则会自动分配一个值。如果“`enum`”子语句是第一个被定义的，赋值为零（`0`）;否则，所分配的值比当前最高枚举值（即，在父类型“语句”中当前“`enum`”子语句之前的隐式或显式最高枚举值）大`1`。
+
+请注意，“`enum`”语句中存在“`if-feature`”语句不会影响自动分配的值。
+
+如果当前最高值等于`2147483647`，那么必须为当前最高值之后的“`enum`”子语句指定一个枚举值。
+
+当现有的枚举类型受到限制时，“`value`”语句必须具有与基类型相同的值或不存在，在这种情况下，该值与基类型中的值相同。
+
+## 9.6.5 使用示例
+
+```YANG
+leaf myenum {
+  type enumeration {
+    enum zero;
+    enum one;
+    enum seven {
+      value 7;
+    }
+  }
+}
+```
+
+叶子“`myenum`”的值为“`seven`”的词汇表示是：
+
+```YANG
+<myenum>seven</myenum>
+```
+
+用下面的`typedef`：
+
+```YANG
+typedef my-base-enumeration-type {
+  type enumeration {
+    enum white {
+      value 1;
+    }
+    enum yellow {
+      value 2;
+    }
+    enum red {
+      value 3;
+    }
+  }
+}
+```
+
+以下改进是合法的：
+
+```YANG
+type my-base-enumeration-type {
+  // legal enum refinement
+  enum yellow;
+  enum red {
+    value 3;
+  }
+}
+```
+
+而下面的改进是非法的：
+
+```YANG
+type my-base-enumeration-type {
+  // illegal enum refinement
+  enum yellow {
+    value 4; // illegal value change
+  }
+  enum black; // illegal addition of new name
+}
+```
+
+以下示例显示了如何使用“`if-feature`”标记“`enum`”，这使得该值只在具有相应功能的服务器上合法：
+
+```YANG
+type enumeration {
+  enum tcp;
+  enum ssh {
+    if-feature ssh;
+  }
+  enum tls {
+    if-feature tls;
+  }
+}
+```
