--- a/section-7/7.18.md
+++ b/section-7/7.18.md
@@ -1,10 +1,10 @@
-# 7.18. “身份”声明
+# 7.18. “identity”声明
 
-“`identity`”声明用于定义新的全球唯一，抽象和无类型的身份。 身份的唯一目的是表示它的名字，语义和存在。 身份可以从头开始定义，也可以从一个或多个基本身份派生。 身份的参数是一个标识符，是身份的名称。 紧接着是一个包含详细身份信息的子状态块。
+“`identity`”声明用于定义新的全局唯一，抽象和无类型的标识。 标识的唯一目的是表示它的名字，语义和存在。 标识可以从头开始定义，也可以从一个或多个基本标识派生。 标识的参数是一个标识符，是该标识的名称。 紧接着是一个包含详细信息的子状态块。
 
-内置数据类型“`identityref`”（见[第9.10节](../section-9/9.10.md)）可用于引用数据模型中的身份。
+内置数据类型“`identityref`”（见[第9.10节](../section-9/9.10.md)）可用于引用数据模型中的标识。
 
-7.18.1.  身份的子语句
+7.18.1.  标识的子语句
 
 ```
 +--------------+---------+-------------+
@@ -20,13 +20,13 @@
 
 ## 7.18.2. “`base`”声明
 
-可选的“`base`”语句将一个字符串作为参数，该字符串是从中派生新身份的现有身份的名称。 如果不存在“`base`”语句，则从头开始定义标识。 如果存在多个“`base`”语句，则从所有这些语句中派生出身份。
+可选的“`base`”语句将一个字符串作为参数，该字符串是从中派生新标识的现有标识符。 如果不存在“`base`”语句，则从头开始定义标识。 如果存在多个“`base`”语句，则从所有这些语句中派生出标识。
 
-如果基本名称上存在前缀，则表示在前缀导入的模块中定义的标识;如果前缀与本地模块的前缀匹配，则表示前缀为本地模块。 否则，必须在当前模块或包含的子模块中定义具有匹配名称的标识。
+如果base语句的参数上存在前缀，则表示引用前缀指定模块中的标识;如果前缀与本模块的前缀匹配，则表示引用本模块的。 另外，被引用的模块中必须存在该标识。
 
-身份不得直接或间接通过其他身份链来引用自己。
+标识不得直接或间接通过引用链来引用自己。
 
-身份的推导具有以下属性：
+标识的派生具有以下属性：
 
 - 这是不反射的，这意味着一个身份不是从它本身衍生出来的。
 
