--- a/section-7/7.18.md
+++ b/section-7/7.18.md
@@ -24,13 +24,13 @@
 
 如果base语句的参数上存在前缀，则表示引用前缀指定模块中的标识;如果前缀与本模块的前缀匹配，则表示引用本模块的。 另外，被引用的模块中必须存在该标识。
 
-标识不得直接或间接通过引用链来引用自己。
+标识不得直接或间接通过派生链来引用自己。
 
 标识的派生具有以下属性：
 
-- 这是不反射的，这意味着一个身份不是从它本身衍生出来的。
+- 这是不反射的，这意味着一个标识不从它本身派生出来。
 
-- 它是传递性的，这意味着如果`B`的身份是从`A`派生的，`C`是从`B`派生的，那么`C`也是从`A`派生的。
+- 它是传递性的，这意味着如果标识`B`是从`A`派生的，`C`是从`B`派生的，那么`C`也是从`A`派生的。
 
 ## 7.18.3. 使用示例
 
