--- a/section-4/4.1.md
+++ b/section-4/4.1.md
@@ -1,6 +1,6 @@
 # 4.1. 功能概述
 
-`YANG`是最初设计用于为`NETCONF`协议的建模语言。 `YANG`模块定义了基于`NETCONF`操作的数据层次结构（包括配置，状态数据，`RPC`和通知）。这样就可以完整描述在`NETCONF`客户端和服务器之间发送的所有数据。虽然不在本规范的范围之内，但是YANG也可以用于`NETCONF`以外的一些协议。
+`YANG`最初设计为`NETCONF`协议的建模语言。 `YANG`模块定义了基于`NETCONF`操作的数据层次结构（包括配置，状态数据，`RPC`和通知）。这样就可以完整描述在`NETCONF`客户端和服务器之间发送的所有数据。虽然不在本规范的范围之内，但是YANG也可以用于`NETCONF`以外的一些协议。
 
 `YANG`将数据的分层组织模型化为一个树，其中每个节点都有一个名称，有一个值或一组子节点。`YANG`提供了对节点的清晰简洁的描述，以及这些节点之间的交互。
 
@@ -18,6 +18,6 @@
 
 `YANG`是一个可扩展的语言，允许标准组织，供应商和个人定义扩展。语法允许这些扩展以自然的方式与标准的`YANG`语句共存，而且`YANG`模块中的扩展足够醒目以方便读者注意到它们。
 
-`YANG`并不用于解决所有问题，YANG的主要目标是搞定网络管理协议（如`NETCONF`）的数据模型，而不是替代`XML`文档或其他数据模型。
+`YANG`并不打算解决所有问题，YANG的目标是搞定网络管理协议（如`NETCONF`）的数据模型，而不是替代`XML`文档或其他数据模型。
 
 `YANG`尽可能保持与简单网络管理协议（`SNMP`）`SMIv2`（管理信息结构版本2 [[RFC2578](https://tools.ietf.org/html/rfc2578)] [[RFC2579](https://tools.ietf.org/html/rfc2579)]）的兼容性。基于`SMIv2`的`MIB`模块可以自动翻译成`YANG`模块并进行只读访问[[RFC6643](https://tools.ietf.org/html/rfc6643)]。然而，`YANG`不关心从`YANG`到`SMIv2`的逆向翻译。
