--- a/section-4/4.2.1.md
+++ b/section-4/4.2.1.md
@@ -2,12 +2,12 @@
 
 `YANG`数据模型在模块中定义。一个模块包含相关定义的集合。
 
-一个模块包含三种类型的语句：模块头(`module header`)语句，“修订”(`revision`)语句和定义(`definition`)语句。模块头部语句描述模块并提供关于模块本身的信息，“修订”语句提供关于模块历史的信息，定义语句是定义数据模型的模块的主体。
+一个模块包含三种类型的语句：模块头(`module header`)语句，“修订”(`revision`)语句和定义(`definition`)语句。模块头部语句描述模块并提供关于模块本身的信息，“修订”语句提供关于模块历史的信息，定义语句是模块中定义数据模型的主体。
 
-服务器可以实现多个模块，允许相同数据的多个视图或服务器数据的不相交子部分的多个视图。或者，服务器可以只实现一个定义所有可用数据的模块。
+服务器可以实现多个模块，允许同一数据的多个视图或不同数据的多个视图。或者，服务器可以只实现一个定义了所有数据的模块。
 
-基于模块设计者的需求，模块可以将其部分定义分成子模块。无论子模块的存在或大小如何，外部视图都是单个模块的外观。
+基于模块设计者的需求，模块可以将其部分定义分成子模块。无论子模块的存在或大小如何，外部都视其为单个模块。
 
-“导入”(`import`)语句允许模块或子模块引用在其他模块中定义的定义。
+“导入”(`import`)语句允许模块或子模块引用在其他模块中的定义。
 
-在模块中使用“包括”(`include`)语句来标识属于它的每个子模块。
+“包含”(`include`)语句允许在模块中指定它的每个子模块。
