--- a/section-4/4.2.3.md
+++ b/section-4/4.2.3.md
@@ -1,8 +1,8 @@
 # 4.2.3. 配置和状态数据(`Configuration and State Data`)
 
-`YANG`可以根据“`config`”语句为状态数据和配置数据建模。 当一个节点被标记为“`config false`”时，其子层被标记为状态数据。 如果标记为“`config true`”，则其子层被标记为配置数据。 报告父容器，列表和关键叶子，给出状态数据的上下文。
+`YANG`可以根据“`config`”属性来定义状态数据和配置数据。 当一个节点被标记为“`config false`”时，则其自身及其子层递归的标记为状态数据。 如果标记为“`config true`”，则其自身及其子层递归的标记为配置数据。 父系的容器和列表及其键值属性叶子，构成了状态数据的上下文。
 
-在这个例子中，为每个接口定义了两个叶子，一个配置的速度和一个观察到的速度。
+在这个例子中，为每个接口定义了两个叶子节点，一个配置的速度和一个观察到的速度。
 
 ```yang
 list interface {
