--- a/section-4/4.2.2.md
+++ b/section-4/4.2.2.md
@@ -80,7 +80,7 @@ container system {
 
 ## 4.2.2.4. 列表节点(`List Nodes`)
 
-列表定义了一系列列表条目。每个条目就像一个容器，如果它定义了任何关键的叶子，它就被其关键叶子的值唯一标识。列表可以定义多个关键叶子，并且可以包含任何类型的任何数量的子节点（包括树叶，列表，容器等）。
+列表定义了一个能容纳多条数据实例条目的节点。其中每个实例都类似一个容器实例，如果列表(list)定义了任何键值叶子节点(key)，则其实例就其键值叶子节点的值唯一标识。列表可以定义多个键值叶子节点，并且可以是任何类型的任何数量的子节点（包括叶子，列表，容器等）。
 
 `YANG`例如：
 
