--- a/section-4/4.2.4.md
+++ b/section-4/4.2.4.md
@@ -10,8 +10,9 @@
 | boolean      | "`true`" 或 "`false`" |
 | decimal64    | 64位有符号十进制数字     |
 | empty        | 一个叶子，没有任何值     |
-| enumeration  | 枚举的一组字符串之一     |
-| identityref  | 对抽象身份的引用        |
+| enumeration  | 枚举，取值从一组字符串中选择之一     |
+| identityref  | 对标识的引用        |
+| instance-identifier | 对数据树中某个节点的引用        |
 | int8         | 8位有符号整数          |
 | int16        | 16位有符号整数         |
 | int32        | 32位有符号整数         |
@@ -22,7 +23,7 @@
 | uint16       | 16位无符号整数         |
 | uint32       | 32位无符号整数         |
 | uint64       | 64位无符号整数         |
-| union        | 成员类型的选择         |
+| union        | 联合体选择一个成员类型来使用 |
 
 
 > 下面是原始内置类型总结表
