--- a/section-4/4.2.4.md
+++ b/section-4/4.2.4.md
@@ -9,7 +9,7 @@
 | bits         | 一组比特(`bits`)或标志(`flags`)       |
 | boolean      | "`true`" 或 "`false`" |
 | decimal64    | 64位有符号十进制数字     |
-| empty        | 一个叶子，没有任何值     |
+| empty        | 使用此类型的叶子没有值     |
 | enumeration  | 枚举，取值从一组字符串中选择之一     |
 | identityref  | 对标识的引用        |
 | instance-identifier | 对数据树中某个节点的引用        |
