--- a/section-4/4.2.5.md
+++ b/section-4/4.2.5.md
@@ -1,8 +1,8 @@
 # 4.2.5.  派生类型（typedef）(`Derived Types (typedef)`)
 
-`YANG`可以使用“`typedef`”语句从基本类型定义派生类型。 基本类型可以是内置类型或派生类型，允许派生类型的层次结构。
+`YANG`可以使用“`typedef`”语句从基本类型定义派生类型。 基本类型可以是内置类型或派生类型，可以进行多层次体系的派生。
 
-派生类型可以用作“类型”语句的参数。
+派生类型可以用作“type”语句的参数。
 
 `YANG`示例：
 
