--- a/section-4/4.2.6.md
+++ b/section-4/4.2.6.md
@@ -1,6 +1,6 @@
-# 4.2.6. 可重复使用的节点组（分组）(` Reusable Node Groups (grouping)`)
+# 4.2.6. 可重复使用的节点组（组定义）(` Reusable Node Groups (grouping)`)
 
-可以使用“`grouping`”语句将节点组组合成可重复使用的集合。 分组定义了一组使用“`uses`”语句实例化的节点。
+可以使用“`grouping`”语句将节点组合成可重复使用的集合。 组定义是一组可以使用“`uses`”语句展开的节点。
 
 `YANG`示例:
 
@@ -33,7 +33,7 @@ container peer {
 </peer>
 ```
 
-分组可以根据使用情况进行细化，从而允许某些语句被覆盖。 在这个例子中，描述被细化：
+在展开组定义时可以根据需要对定义再次调整，某些语句可以被覆盖。 在下面的示例中，节点描述被重写了：
 
 ```YANG
 container connection {
