--- a/section-4/4.2.7.md
+++ b/section-4/4.2.7.md
@@ -1,10 +1,10 @@
 # 4.2.7. 选择(`Choices`)
 
-`YANG`允许数据模型使用“`choice`”和“`case`”语句将不兼容的节点分隔为不同的选项。 “`choice`”语句包含一组“`case`”语句，用于定义不能一起出现的模式节点集合。 每个“`case`”可能包含多个节点，但每个节点可能只出现在“`choice`”下的一个“`case`”中。
+`YANG`模型中使用“`choice`”和“`case`”语句将不能一起出现的节点分隔在各自的区块中。 “`choice`”语句包含一组“`case`”语句，用于定义不能一起出现的模型节点集合。 每个“`case`”中可以包含多个节点，但一个节点不出现在多个“`case`”中。
 
-`choice`和`case`节点仅出现在模式树(`schema tree`)中，而不出现在数据树中。 概念模式之外不需要额外的层次结构。 一个`case`的存在是由一个或多个节点的存在表示。
+`choice`和`case`节点仅出现在模型树(`schema tree`)中，而不在数据树上表现。 choice和case附加的层次结构只存在于概念模型上。 数据树上一个`case`是否存在是由其中定义的节点是否存在来决定的。
 
-由于只有一个选择的情况在任何时候都是有效的，所以当在数据树中创建一个节点时，所有其他情况下的所有节点都被隐式删除。 服务器处理约束的执行，防止配置中存在不兼容。
+由于任何时候只有一个case可以生效，所以当在数据树中创建一个节点时，所有其他case中的所有节点都被隐式删除。 服务器执行此约束，防止配置中存在的不兼容。
 
 `YANG`示例：
 
