--- a/section-4/4.2.8.md
+++ b/section-4/4.2.8.md
@@ -1,10 +1,10 @@
-# 4.2.8. 扩展数据模型（扩充）(`Extending Data Models (augment)`)
+# 4.2.8. 扩充数据模型（扩充）(`Extending Data Models (augment)`)
 
-`YANG`允许模块将其他节点插入数据模型，包括当前模块（及其子模块）和外部模块。 例如，这对于供应商以可互操作的方式向标准数据模型添加供应商特定的参数非常有用。
+`YANG`允许模块向已有的数据模型中插入节点，包括当前模块（及其子模块）和外部模块。 这个特性非常有用，允许供应商向标准模型中添加供应商的特有参数。
 
-“`augment`”语句定义插入新节点的数据模型层次结构中的位置，“`when`”语句定义新节点有效时的条件。
+“`augment`”语句定义在模型中插入新节点的位置，“`when`”语句定义新节点生效的条件。
 
-当服务器实现一个包含“`augment`”语句的模块时，这意味着扩充模块的服务器实现包含附加节点。
+当服务器实现一个包含“`augment`”语句的模块时，这意味着服务器上被扩充的模块包含了附加的节点。
 
 `YANG`示例：
 
