--- a/section-4/4.2.9.md
+++ b/section-4/4.2.9.md
@@ -1,6 +1,6 @@
 # 4.2.9. 操作定义
 
-`YANG`允许定义的操作。 使用`YANG`数据定义语句对操作名称，输入参数和输出参数进行建模。 模块顶层的操作用“`rpc`”语句定义。 操作也可以绑定到容器或列表数据节点。 这些操作用“操作”语句来定义。
+`YANG`允许定义操作。 使用`YANG`数据定义语句对操作名称，输入参数和输出参数进行建模。 模块顶层的操作用“`rpc`”语句定义。 操作也可以绑定到容器或列表数据节点, 用“action”语句来定义。
 
 `YANG`顶层操作示例：
 
