--- a/section-5/5.1.md
+++ b/section-5/5.1.md
@@ -1,12 +1,12 @@
 # 5.1. 模块和子模块
 
-模块是`YANG`模型的基本单位。一个模块定义一个单一的数据模型。一个模块也可以用来对现有的数据模型进行节点扩充。
+模块是`YANG`模型的基本单位。一个模块定义一个单一的数据模型。一个模块也可以用来对现有数据模型进行节点扩充。
 
-子模块是为模块提供定义的模型分块。模块可以包括任意数量的子模块，但是每个子模块可以仅属于一个模块。
+子模块是为模块提供组成部分的模型块。模块可以包括任意数量的子模块，但是每个子模块可以仅属于一个模块。
 
-建议`YANG`模块和子模块的开发人员谨慎选择模块名称，避免与标准模块和其他企业模块的冲突，例如，使用企业或组织名称作为模块名称的前缀。在一个服务器中，所有模块名称必须是唯一的。
+建议`YANG`模块和子模块的开发人员谨慎选择模块名称，避免与标准模型或其他企业的模块产生冲突，例如，使用本企业或组织的名称作为模块名的前缀。在一个服务器中，所有模块名称必须是唯一的。
 
-模块使用“`include`”语句来列出其所有的子模块。属于同一模块的模块和子模块中可以引用模块及其所有子模块中包含所有的定义。
+模块使用“`include`”语句来列出其所有的子模块。属于同一模块的子模块及模块自身中可以引用模块及其所有子模块中包含所有的定义。
 
 模块或子模块使用“`import`”语句来引用外部模块。模块或子模块中可以通过“`import`”语句中指定的前缀引用外部模块中的定义。
 
@@ -14,7 +14,7 @@
 
 模块或子模块不能include其他模块的子模块，子模块禁止import自己的主模块。
 
-“`import`”和“`include`”语句用于使用其他模块中定义：
+“`import`”和“`include`”语句用于使用其他模块中的定义：
 
 - 要使模块或子模块引用外部模块中的定义，必须import外部模块。
 
