--- a/section-5/5.1.1.md
+++ b/section-5/5.1.1.md
@@ -1,8 +1,8 @@
-# 5.1.1. 导入并包含修订
+# 5.1.1. 指定修订版本的导入和包含
 
-发布的模块随着时间的推移而独立发展为了实现这一发展，可以使用特定的修订版导入模块。最初，模块在写入模块时导入当前其他模块的修订版。随着未来版本导入模块的发布，导入模块不受影响，其内容不变。当模块的作者准备移动到最近发布的导入模块的修订版时，模块将被重新发布，并带有更新的“`import`”语句。通过重新发布新版本，作者明确表示接受导入模块的任何更改。
+发布的模块会随着时间的推移而发展，为了支持这种情况，YANG支持指定版本的导入模块。模块最初在创建时导入了指定版本的外部模块。则当未来外部模块发布新的版本时，本模块仍然使用指定版本的原外部模块，不受新版本的影响，其内容不变。当模块的作者准备迁移到新版本的外部模块，可以重新发布此模块，并更新其“`import`”语句。通过重新发布新版本，作者明确表示接受导入模块的任何更改。
 
-对于子模块，这个问题是相关的，但更简单。包含子模块的模块或子模块可以指定包含的子模块的修订版本。如果某个子模块发生更改，则需要更新包含该子模块的任何模块或子模块以引用新的修订版本。
+对于子模块，这个问题是类似的，但更简单。包含子模块时可以指定包含的子模块的修订版本。如果被包含的子模块发生版本更新，则需要更新所有通过指定版本方式包含了该子模块的模块或子模块。
 
 例如，模块“b”导入模块a。
 
@@ -34,6 +34,6 @@ module b {
 }
 ```
 
-当“a”的作者发布一个新的修订版本时，对于“b”的作者来说，这些变化可能是不可接受的。如果新的修订是可以接受的，那么“b”的作者可以在“`import`”语句中重新发布修订版本。
+当“a”的作者发布一个新的修订版本时，对于“b”的作者来说，这些变化可能是不可接受的。如果新的修订是可以接受的，那么“b”的作者可以修订“`import`”语句中的版本后重新发布。
 
-如果一个模块没有通过特定的修订导入，则未定义使用哪个修订。
+如果一个模块没有通过指定修订版本的方式导入，则未定义使用哪个修订。
