--- a/section-5/5.1.2.md
+++ b/section-5/5.1.2.md
@@ -1,6 +1,6 @@
 # 5.1.2. 模块层次结构
 
-`YANG`允许在多个层次结构中对数据进行建模，其中数据可能有多个顶级节点。模块中的每个顶级数据节点定义一个单独的层次结构。具有多个顶级节点的模型有时很方便，并且得到了`YANG`的支持。
+`YANG`允许使用多个层次结构中对数据进行建模，模块中的数据可以有多个顶级节点。每个顶级数据节点定义了一个独立的层次结构。具有多个顶级节点的模型有时很方便，并且得到了`YANG`的支持。
 
 ## 5.1.2.1. `NETCONF` `XML`编码
 
