--- a/section-5/5.3.md
+++ b/section-5/5.3.md
@@ -1,9 +1,9 @@
 # 5.3. XML名称空间
 
-所有的`YANG`定义在一个模块中指定。 每个模块绑定到独特的`XML`名称空间[[XML-NAMES](https://tools.ietf.org/html/rfc7950#ref-XML-NAMES)]，这是一个全球唯一的`URI` [[RFC3986](https://tools.ietf.org/html/rfc3986)]。 `NETCON`F客户端或服务器在数据的`XML`编码过程中使用名称空间。
+所有的`YANG`定义在以模块为单位组织起来。 每个模块绑定到唯一的`XML`名称空间[[XML-NAMES](https://tools.ietf.org/html/rfc7950#ref-XML-NAMES)]，这是一个全球唯一的`URI` [[RFC3986](https://tools.ietf.org/html/rfc3986)]。 `NETCON`F客户端或服务器在数据的`XML`编码过程中使用名称空间。
 
-在`RFC`流中发布的模块的`XML`名称空间[[RFC4844](https://tools.ietf.org/html/rfc4844)]必须由IANA分配; 参见[[RFC6020]中的第14节](https://tools.ietf.org/html/rfc6020#section-14)。
+由`RFC`工作流发布的模块的`XML`名称空间[[RFC4844](https://tools.ietf.org/html/rfc4844)]必须由IANA分配; 参见[[RFC6020]中的第14节](https://tools.ietf.org/html/rfc6020#section-14)。
 
-私有模块的`XML`名称空间由拥有该模块的组织分配，没有中央注册表。 名称空间URI必须被选择，以便它们不能与标准或其他企业名称空间冲突 - 例如，通过在名称空间中使用企业或组织名称。
+私有模块的`XML`名称空间由拥有该模块的组织分配，没有管理机构。 选择名称空间时注意不要与标准或其他企业名称空间冲突 - 例如，在名称空间中使用企业或组织名称。
 
 [第7.1.3节](../section-7/7.1.md)介绍了“命名空间”声明。
