--- a/section-5/5.4.md
+++ b/section-5/5.4.md
@@ -1,5 +1,5 @@
-# 5.4. 解决分组，类型和标识名称
+# 5.4. 组定义，类型和标识的解析
 
-分组(`grouping`)，类型(`type`)和标识名称(`identity names`)在其定义的上下文中解析，而不是在其使用的上下文中解析。 分组，类型定义和标识的用户不需要导入模块或包含子模块来满足原始定义所做的所有引用。 这就像传统编程语言中的静态范围一样。
+组定义(`grouping`)，类型(`type`)和标识名称(`identity names`)在其定义的上下文中解析，而不是在其使用的上下文中解析。 组定义，类型和标识的使用者不需要导入模块或包含子模块来满足原始定义所做的所有引用。 这就像传统编程语言中的作用域一样。
 
-例如，如果一个模块定义了一个引用类型的分组，那么在第二个模块中使用该分组时，该类型将在原始模块的上下文中解析，而不是在第二个模块的上下文中解析。 如果两个模块都定义了类型，则没有歧义。
+例如，如果一个模块定义了一个引用类型的组定义，那么在第二个模块中使用该组定义时，该类型将在原始模块的上下文中解析，而不是在第二个模块的上下文中解析。 即使两个模块都定义了类型，也没有歧义。
