--- a/section-5/5.5.md
+++ b/section-5/5.5.md
@@ -1,11 +1,11 @@
 # 5.5. 嵌套的类型和组定义
 
-类型定义和分组可以出现在许多`YANG`语句之内，允许它们出现的模型层次结构的特定范围内。这使得类型和组定义可以在使用位置附近定义，而不是将它们都放在模块最顶层。就近定义提高了可读性。
+类型和组定义可以出现在许多`YANG`声明中，允许它们作用在模型层次的特定范围内。这使得类型和组定义可以在使用位置附近定义，而不是将它们都放在模块最顶层。就近定义提高了可读性。
 
-作用域的设定可以用来避免不同子模块中的类型之间产生命名冲突。使用类型名称时节省了用于防止冲突的前缀字符串。
+局部定义的好处是避免了不同子模块中的类型之间的命名冲突。使用类型名称时节省了用于防止冲突的前缀字符串。
 
-最后，作用域的设定允许模块作者将模块或子模块的类型和组定义保留为私有模式，以防止其重用。由于只有顶级类型和分组（即，作为“模块”或“子模块”语句的子分支出现的那些）才能在模块或子模块之外使用，开发人员可以更好地控制其模块的外部呈现，支持必要的内部信息隐藏，设定共享内容与私有内容之间的界限。
+最后，作用域的设定允许模块作者将模块或子模块的类型和组定义保留为私有模式，以防止其被重用。由于只有顶层类型和组定义（即，作为“模块”或“子模块”语句的直接子分支出现的那些）才能在模块或子模块之外使用，开发人员可以更好地控制模块的外部呈现，支持必要的信息隐藏，设定共享内容与私有内容之间的界限。
 
-局部的定义不能覆盖更大范围上的定义。如果模型层次结构中的更高级上已经存在某个标识符的定义，则无法再次定义该类型或组定义。
+局部的定义不能覆盖高层上的定义。如果模型层次结构中的高层次上已经存在某个标识符的定义，则无法再次定义该类型或组定义。
 
-对无前缀的或使用当前模块前缀的类型或组定义进行引用时，解析时会逐层往每个父系声明的直接子声明中来匹配“`typedef`”或“`grouping`”。
+对无前缀或使用当前模块前缀的类型或组定义进行引用时，解析时会逐层往上匹配符合名字的“`typedef`”或“`grouping`”子声明。
