--- a/section-5/5.6.4.md
+++ b/section-5/5.6.4.md
@@ -2,16 +2,16 @@
 
 本文档定义了用于通告一致性信息的以下机制。其他机制可以由未来的规范来定义。
 
-`NETCONF`服务器必须宣布它实现了模块（见[第5.6.5](5.6.5.md)）通过实施`YANG`模块“`ieft-yang-library`”在[[RFC7895](https://tools.ietf.org/html/rfc7895)]中定义和列出所有实现的模块中的“`/modules-state/module`”列表。
+`NETCONF`服务器必须支持由[[RFC7895](https://tools.ietf.org/html/rfc7895)]定义的`YANG`模块“`ieft-yang-library`”来公布其支持的模块（见[第5.6.5](5.6.5.md)）列表，在列表“`/modules-state/module`”中列出所有实现的模块。
 
-服务器还必须在`<hello>`消息中宣告以下功能（换行符和空格仅用于格式化）：
+服务器还必须在`<hello>`消息中宣告以下能力（换行符和空格仅用于格式化）：
 
-```YANG
+```
 urn:ietf:params:netconf:capability:yang-library:1.0?revision=<date>&module-set-id=<id>
 ```
 
-参数“`revision`”与服务器实现的“`ietf-yang-library`”模块的修改日期具有相同的值。这个参数必须存在。
+参数“`revision`”与服务器通过“`ietf-yang-library`”宣告的模块的修订日期具有相同的值。这个参数必须存在。
 
-参数“`module-set-id`”与“`ietf-yang-library`”中的叶子“`/modules-state/module-set-id`”具有相同的值。这个参数必须存在。
+参数“`module-set-id`”与通过“`ietf-yang-library`”宣告的叶子“`/modules-state/module-set-id`”具有相同的值。这个参数必须存在。
 
 通过这种机制，客户端可以缓存服务器支持的模块，只有在`<hello>`消息中的“`module-set-id`”值发生变化时才更新缓存。
