--- a/section-5/5.7.md
+++ b/section-5/5.7.md
@@ -1,3 +1,3 @@
-# 5.7. 数据存储修改
+# 5.7. 数据修改
 
-数据模型可以允许服务器以不通过网络管理协议消息明确定向的方式来改变配置数据存储。 例如，数据模型可以定义在客户端不提供系统生成值时分配的叶子。 指定允许这些更改情况的正式机制超出了本规范的范围。
+数据模型可以允许服务器以不显示使用网络管理协议消息的方式来修改配置数据。 例如，数据模型可以定义在客户端不提供但由服务器自动生成值的叶子。 正式描述这些机制的细节超出了本规范的范围。
