--- a/section-6/6.1.md
+++ b/section-6/6.1.md
@@ -1,3 +1,3 @@
 # 6.1. 词法标记
 
-`YANG`模块被解析为一系列的标记。 本节详细介绍了从输入流中识别令牌的规则。 `YANG`标记化规则既简单又强大。 简单性是由于需要保持解析器易于实现的驱动，而功耗是由建模者需要以可读格式表示模型的事实驱动的。
+`YANG`模块被解析为一系列的标记。 本节详细介绍了从输入流中识别令牌的规则。 `YANG`标记化规则既简单又强大。 简单性是由于需要保持解析器易于实现的驱动，而强大是基于让建模者以可读格式表达模型的需求上。
