--- a/section-6/6.1.1.md
+++ b/section-6/6.1.1.md
@@ -1,5 +1,5 @@
 # 6.1.1. 注释
 
-评论是`C++`风格。 单行注释以“//”开始，并在行尾处结束。 块注释以“`/*`”开始，以最接近的“`*/`”结束。
+注释是`C++`风格的。 单行注释以“//”开始，并在行尾处结束。 块注释以“`/*`”开始，以最接近的“`*/`”结束。
 
-请注意，在带引号的字符串中（[第6.1.3节](6.1.3.md)），这些字符对永远不会被解释为注释的开始或结束。
+请注意，在带引号的字符串内（[第6.1.3节](6.1.3.md)），这些字符永远不会被解释为注释。
