--- a/section-6/6.1.3.md
+++ b/section-6/6.1.3.md
@@ -1,12 +1,12 @@
-# 6.1.3. 引号的使用
+# 6.1.3. 引号字串
 
 未加引号的字符串不能包含任何空格，制表符，回车符或换行符，单引号或双引号字符，分号（“`;`”），大括号（“`{`”或“`}`”），或注释序列（“`//`”，“`/*`”或“`*/`”）。
 
-请注意，任何关键字都可以合法显示为未加引号的字符串。
+任何关键字都是合法的未加引号字符串。
 
-未加引号的字符串，每个字符都被保留。转义用的反斜杠字符的在其中不生效,原样保留。
+未加引号的字符串，每个字符都被保留。转义用的反斜杠字符的在其中不生效,保持原样。
 
-如果双引号字符串包含的换行符后紧跟着用于对齐文本缩进的空格或制表符，则会将该前导空白符从字符串中删除，直到对齐起始列的双引号或第一个非空白字符，以小者为准。在剥离前导空白符的过程中制表符解释为8个空格字符。
+如果双引号字符串中的换行符后紧跟着用于对齐文本缩进的空格或制表符，则该前导空白符会自动从字符串中删除，直到对齐起始列的双引号或第一个非空白字符，以小者为准。在删除过程中制表符被视为8个空格字符。
 
 如果双引号字符串在换行符之前包含空格或制表符，则该尾随的空格会自动从字串中删除。
 
@@ -25,7 +25,7 @@
 
 在双引号字符串中，空白修剪在替换反斜线转义字符之前完成。连接是作为最后一步执行的。
 
-## 6.1.3.1.  引用例子
+## 6.1.3.1.  字串举例
 
 以下字符串是等效的：
 
