--- a/section-6/6.2.md
+++ b/section-6/6.2.md
@@ -1,3 +1,3 @@
-# 6.2. 身份标识
+# 6.2. 标识符
 
-标识符用于标识不同种类的`YANG`项目的名称。 每个标识符以大写或小写`ASCII`字母或下划线字符开头，后跟零个或多个`ASCII`字母，数字，下划线字符，连字符和圆点。 实现必须支持最多`64`个字符的标识符，并且可以支持更长的标识符。 标识符区分大小写。 标识符语法由[第14节](../second-14/README.md)中的规则“标识符(`identifier`)”正式定义。标识符可以被指定为带引号或不带引号的字符串。
+标识符用于标识`YANG`模型中的各种元素。 标识符以大小写字母或下划线字符开头，后面可以跟零个或多个`ASCII`字母，数字，下划线字符，连字符和句点。 实现必须支持最多`64`个字符的标识符，并且可以支持更长。 标识符区分大小写。 标识符语法由[第14节](../second-14/README.md)中的规则“标识符(`identifier`)”定义。标识符可以使用带引号或不带引号的字符串。
