--- a/section-6/6.2.1.md
+++ b/section-6/6.2.1.md
@@ -1,6 +1,6 @@
 # 6.2.1. 标识符及其名字空间
 
-每个标识符在一个特定的名字空间中都有效，该名字空间取决于该`YANG`元素的类型。在同一个命名空间中的所有标识符必须是唯一的。
+每个标识符都在一个特定的名字空间中有效，该名字空间取决于该`YANG`元素的类型。在同一个命名空间中的所有标识符必须是唯一的。
 
 - 所有模块和子模块名称共享相同的全局模块标识符名称空间。
 
@@ -14,7 +14,7 @@
 
 - 在父节点下或模块/子模块顶层定义的所有组定义共享同一个组定义名称空间。 该名称空间的作用域是父节点或模块的所有后代节点。 这意味着任何后代节点都可以使用该组定义，并且不能定义具有相同名称的组。
 
-- 在父节点下或模块/子模块的顶层定义（直接或通过“uses”语句）的所有叶子，叶子列表，容器，分支选择，`rpcs`，动作，通知，`anydatas`和`anyxmls` 共享相同的标识符名称空间。 该名称空间的作用域为父节点或模块，除非父节点是个选择的分支项节点。 在这种情况下，命名空间的作用域是最靠近的非分支也非选择节点的祖先节点。
+- 在父节点下或模块/子模块的顶层定义（直接或通过“uses”语句）的所有叶子，叶子列表，容器，分支选择，`rpcs`，动作，通知，`anydatas`和`anyxmls` 共享相同的标识符名称空间。 该名称空间的作用域为父节点或模块，除非父节点是个用于选择的分支项节点。 在这种情况下，命名空间的作用域是最靠近的非分支项节点也非选择节点的祖先节点。
 
 - 选择中的所有分支自身共享同一个分支标识符名称空间。 该名称空间的作用域是父级选择节点。
 
