--- a/section-6/6.3.md
+++ b/section-6/6.3.md
@@ -1,6 +1,6 @@
 # 6.3. 声明
 
-一个`YANG`模块包含一系列的语句。 每个语句都以一个关键字开头，后跟零个或一个参数，后跟一个分号（“`;`”）或一个大括号内的子状态块（“`{}`”）：
+一个`YANG`模块包含一系列的语句。 每个语句都以一个关键字开头，后跟零个或一个参数，再跟一个分号（“`;`”）或由一对大括号括起的子语句块（“`{}`”）：
 
 ```YANG
 statement = keyword [argument]（";" / "{" * statement "}"）
