--- a/section-6/6.4.md
+++ b/section-6/6.4.md
@@ -1,14 +1,14 @@
-# 6.4. `XPath`评估
+# 6.4. `XPath`评估求值
 
-`YANG`依靠`XML`路径语言（`XPath`）1.0 [[XPATH](https://tools.ietf.org/html/rfc7950#ref-XPATH)]作为指定许多节点间引用和依赖关系的符号。实现不需要实现`XPath`解释器，但必须确保在数据模型中编码的需求得到执行。执行的方式是执行决定。 `XPath`表达式必须在语法上是正确的，所有使用的前缀必须存在于`XPath`上下文中（见[第6.4.1节](6.4.1.md)）。实现可以选择手动实现它们，而不是直接使用`XPath`表达式。
+`YANG`在节点引用及依赖关系声明中使用符合[[XPATH](https://tools.ietf.org/html/rfc7950#ref-XPATH)]1.0规范的Xpath来作为节点指代符号。实现上不强制实现`XPath`解释器，但必须满足数据模型中的编码需求。如何支持XPath是一个实现上的决定。 `XPath`表达式必须在语法上正确，所有使用的前缀必须存在于`XPath`上下文中（见[第6.4.1节](6.4.1.md)）。实现时可以选择自行编码实现，而不是直接使用`XPath`表达式。
 
-`XPath`表达式中使用的数据模型与`XPath 1.0` [[XPATH](https://tools.ietf.org/html/rfc7950#ref-XPATH)]中使用的数据模型相同，具有与`XSLT 1.0`所使用的根节点子节点相同的扩展名（请参见[[XSLT](https://tools.ietf.org/html/rfc7950#ref-XSLT)]中的[第3.1节](https://www.w3.org/TR/1999/REC-xslt-19991116#root-node-children)）。具体而言，这意味着根节点可以具有任意数量的元素节点作为其子节点。
+`XPath`表达式中的数据模型与`XPath 1.0` [[XPATH](https://tools.ietf.org/html/rfc7950#ref-XPATH)]中规定的数据模型相同，具有与`XSLT 1.0`所规定的根节点子节点方式相同的扩展（参见[[XSLT](https://tools.ietf.org/html/rfc7950#ref-XSLT)]中的[第3.1节](https://www.w3.org/TR/1999/REC-xslt-19991116#root-node-children)）。具体而言，这意味着根节点可以具有任意数量的子节点。
 
-数据树没有文档顺序的概念。一个实现需要选择一些文档顺序，但是如何做是一个实现的决定。这意味着`YANG`模块中的`XPath`表达式不应该依赖于任何特定的文档顺序。
+数据树没有文档顺序的概念。一个实现需要选择一些文档顺序，但是如何做是一个实现上的决定。这意味着`YANG`模块中的`XPath`表达式不应该依赖于任何特定的文档顺序。
 
-`XPath 1.0`中的数字是`IEEE 754` [[IEEE754-2008](https://tools.ietf.org/html/rfc7950#ref-IEEE754-2008)]双精度浮点值;参见[[XPATH](https://tools.ietf.org/html/rfc7950#ref-XSLT)]中的[第3.5节](https://www.w3.org/TR/1999/REC-xpath-19991116/#numbers)。这意味着`int64`，`uint64`和`decimal64`类型的某些值（请参见第[9.2](../section-9/9.2.md)和[9.3](../section-9/9.3.md)节）不能在`XPath`表达式中精确表示。因此，在`XPath`表达式中使用具有`64`位数值的节点时，应该谨慎行事。特别是涉及到对比的数字比较可能会产生意想不到的结果。
+`XPath 1.0`中的数字是`IEEE 754` [[IEEE754-2008](https://tools.ietf.org/html/rfc7950#ref-IEEE754-2008)]规范的双精度浮点值;参见[[XPATH](https://tools.ietf.org/html/rfc7950#ref-XSLT)]中的[第3.5节](https://www.w3.org/TR/1999/REC-xpath-19991116/#numbers)。这意味着`int64`，`uint64`和`decimal64`类型的某些值（请参见第[9.2](../section-9/9.2.md)和[9.3](../section-9/9.3.md)节）不能在`XPath`表达式中精确表示。因此，在`XPath`表达式中使用具有`64`位数值的节点时，应该谨慎行事。特别是涉及到对比的数字比较可能会产生意想不到的结果。
 
-例如，请考虑以下定义：
+例如，考虑以下定义：
 
 ```YANG
 leaf lxiv {
@@ -19,4 +19,4 @@ leaf lxiv {
 }
 ```
 
-具有值`10.0000000000000001`的“`lxiv`”叶的实例将成功通过验证。
+取值为`10.0000000000000001`的“`lxiv`”叶子实例将成功通过验证。
