--- a/section-6/6.4.1.md
+++ b/section-6/6.4.1.md
@@ -28,11 +28,11 @@
 
 如果一个存在的节点位于container中，则该container也存在于可访问树中，仅限于该container不含有presence标记。
 
-上下文节点随着`YANG` `XPath`表达式而变化，并且在定义`XPath`表达式的`YANG`语句的处被确定。
+上下文节点随着`YANG` `XPath`表达式而变化，并且在定义`XPath`表达式的`YANG`语句处被确定。
 
 ## 6.4.1.1. 例子
 
-鉴于以下模块：
+参考以下模块：
 
 ```YANG
 module example-a {
