--- a/section-6/6.5.md
+++ b/section-6/6.5.md
@@ -1,7 +1,7 @@
-# 6.5. 模式节点标识符
+# 6.5. 模型节点标识符
 
-模式节点标识符是标识模式树中节点的字符串。 它有两种形式，分别是[第14节](../section-14/README.md)中的“`absolute-schema-nodeid`”和“`descendant-schema-nodeid`”规则定义的“`absolute`”和“`descendant`”。 模式节点标识符由标识符的路径组成，用斜线（“`/`”）分隔。 在绝对模式节点标识符中，前导斜杠后面的第一个标识符是本地模块或导入模块中的任何顶级模式节点。
+模型节点标识符是标识模型树中节点的字符串。 它有两种形式，分别是[第14节](../section-14/README.md)中的“`absolute-schema-nodeid`”和“`descendant-schema-nodeid`”规则定义的“`absolute`”和“`descendant`”。 模型节点标识符由标识符的路径组成，用斜线（“`/`”）分隔。 在绝对模式节点标识符中，首个斜杠后面的标识符是本地模块或导入模块中的一个顶级节点。
 
-对外部模块中定义的标识符的引用必须使用适当的前缀进行限定，对当前模块及其子模块中定义的标识符的引用可以使用前缀。
+引用外部模块标识符时必须使用前缀限定，对当前模块及其子模块中定义的标识符进行引用时可以使用前缀。
 
-例如，为了识别顶级节点“`a`”的子节点“`b`”，可以使用字符串“`/a/b`”。
+例如，为了标识本模块顶级节点“`a`”的子节点“`b`”，可以使用字符串“`/a/b`”。
