--- a/section-7/7.1.md
+++ b/section-7/7.1.md
@@ -1,10 +1,10 @@
 # 7.1  "模块"声明
 
-“`module`”语句定义了模块的名称，并将属于该模块的所有语句分组在一起。 “`module`”语句的参数是模块的名称，后面跟着一个包含详细模块信息的子语句块。 模块名称是一个标识符（见[第6.2节](../section-6/6.2.md)）。
+“`module`”语句定义了模块的名称，并将属于该模块的所有语句组织在一起。 “`module`”语句的参数是模块的名称，后面跟着一个包含详细模型信息的子语句块。 模块名称是一个标识符（见[第6.2节](../section-6/6.2.md)）。
 
 在`RFC`流中发布的模块的名称[[RFC4844](https://tools.ietf.org/html/rfc4844)]必须由IANA分配; 参见[[RFC6020](https://tools.ietf.org/html/rfc6020)]中的[第14节](https://tools.ietf.org/html/rfc6020#section-14)。
 
-私有模块名称由拥有该模块的组织分配，没有中央注册表。 有关如何命名模块的建议，请参见[第5.1节](../section-5/5.1.md)。
+私有模块名称由拥有该模块的组织分配，没有集中管理组织。 有关如何命名模块的建议，请参见[第5.1节](../section-5/5.1.md)。
 
 模块通常具有以下布局：
 
@@ -35,7 +35,7 @@ module <module-name> {
 
 ## 7.1.1. 模块的子语句
 
-| 子语句     | 章节     | 基数    |
+| 子语句     | 章节     | 数量  |
 | :------------- | :------------- | :------------- |
 | `anydata`   | [7.10](7.10.md)| 0..n |
 | `anyxml`    | [7.11](7.11.md)| 0..n |
@@ -104,7 +104,7 @@ module <module-name> {
 
 ## 7.1.2. “`yang-version`”声明
 
-“`yang-version`”语句指定在开发模块时使用了哪种版本的`YANG`语言。 声明的参数是一个字符串。 它必须包含根据此规范定义的`YANG`模块的值“`1.1`”。
+“`yang-version`”语句指定在开发模块时使用了哪种版本的`YANG`语言。 声明的参数是一个字符串。 它必须包含根据此规范为`YANG`模块定义的值“`1.1`”。
 
 不包含“`yang-version`”语句的模块或子模块，或者包含值“`1`”的模块或子模块是针对[[RFC6020](https://tools.ietf.org/html/rfc6020)]中定义的`YANG`版本`1`开发的。
 
@@ -114,37 +114,37 @@ module <module-name> {
 
 ## 7.1.3. “`namespace`”声明
 
-“`namespace`”语句定义了`XML`名称空间，模块定义的所有标识符都以`XML`编码进行了限定，除了分组内定义的数据节点(`data nodes`)，动作节点(`action nodes`)和通知节点(`notification nodes`)的标识符（详见[7.13节](7.13.md)）。 “`namespace`”语句的参数是命名空间的`URI`。
+“`namespace`”语句定义了`XML`名字空间，模块定义的所有标识符都以`XML`编码进行了限定，除了组定义内的数据节点(`data nodes`)，动作节点(`action nodes`)和通知节点(`notification nodes`)的标识符（详见[7.13节](7.13.md)）。 “`namespace`”语句的参数是命名空间的`URI`。
 
 另见[第5.3节](../section-5/5.3.md)。
 
 ## 7.1.4.  “`prefix`”声明
 
-   “`prefix`”语句用于定义与模块及其名称空间关联的前缀。 “`prefix`”语句的参数是用作访问模块前缀的前缀字符串。前缀字符串可以与模块一起用于引用模块中包含的定义，例如“`if:ifName`”。前缀是一个标识符（见[第6.2节](../section-6/6.2.md)）。
+   “`prefix`”语句用于定义与模块及其名字空间关联的前缀。 “`prefix`”语句的参数是个前缀字符串。前缀字符串用于引用模块中包含的定义，例如“`if:ifName`”。前缀是一个标识符（见[第6.2节](../section-6/6.2.md)）。
 
 在“`module`”语句中使用时，“`prefix`”语句定义了在导入模块时建议使用的前缀。
 
-为了提高`NETCONF` `XML`的可读性，生成使用前缀的`XML`或`XPath`的`NETCONF`客户机或服务器应该使用模块定义的前缀作为`XML`命名空间前缀，除非存在冲突。
+为了提高`NETCONF` `XML`的可读性，生成带前缀的`XML`或`XPath`内容时的`NETCONF`客户机或服务器应该使用模块定义的前缀作为`XML`命名空间前缀，除非存在冲突。
 
-在“`import`”语句中使用时，“`prefix`”语句定义在导入模块中访问定义时要使用的前缀。当使用从导入的模块引用标识符时，使用导入模块的前缀字符串，后跟冒号（“`:`”）和标识符，例如“`if:ifIndex`”。为了提高`YANG`模块的可读性，在模块导入时，应该使用模块定义的前缀，除非有冲突。如果存在冲突，即两个已定义相同前缀的不同模块被导入，则至少其中一个模块必须以不同的前缀导入。
+在“`import`”语句中使用时，“`prefix`”语句规定了访问外部模块定义时要使用的前缀。当使用被导入的标识符时，要使用导入模块时指定的前缀字符串，后跟冒号（“`:`”）和标识符，例如“`if:ifIndex`”。为了提高`YANG`模块的可读性，在模块导入时，应该使用模块定义的前缀，除非有冲突。如果存在冲突，即两个已定义相同前缀的不同模块被导入，则至少其中一个模块必须以不同的前缀导入。
 
 所有前缀，包括模块本身的前缀，必须在模块或子模块中是唯一的。
 
 ## 7.1.5. “`import`”声明
 
-“`import`”语句使得一个模块的定义在另一个模块或子模块中可用。参数是要导入的模块的名称，语句之后是一个包含详细导入信息的子状态块。导入模块时，导入模块可以：
+“`import`”语句使得一个模块的定义在另一个模块或子模块中可用。参数是要导入的模块的名称，语句之后是一个包含详细导入信息的子语句块。导入模块时，导入模块可以：
 
-- 使用导入模块或其子模块顶层定义的任何分组和`typedef`。
+- 使用被导入模块或其子模块顶层定义的任何组定义`grouping` 和类型定义`typedef`。
 
-- 使用导入模块或其子模块中定义的任何扩展名，特性和标识。
+- 使用被导入模块或其子模块中定义的任何扩展，特性和标识。
 
-- 在“`must`”，“`path`”和“`when`”语句中使用导入模块的模式树中的任何节点，或者在“`augment`”和“`deviation`”语句中使用目标节点。
+- 在“`must`”，“`path`”和“`when`”语句中使用被导入模块的模型树中的任何节点，或者作为“`augment`”和“`deviation`”语句的目标节点。
 
-强制的“`prefix`”子语句为导入的模块分配一个前缀，该前缀的作用域是导入模块或子模块。可以指定多个“`import`”语句从不同的模块导入。
+必选的“`prefix`”子语句为被导入模块指定一个前缀，该前缀的作用域限制在import发生的模块或子模块内。一个模块可以使用多个“`import`”语句从不同的模块导入。
 
-当存在可选的“`revision-date`”子语句时，本地模块中由定义引用的任何`typedef`，分组(`grouping`)，扩展(`extension`)，特征(`feature`)和标识(`identity`)都将取自导入模块的指定修订版本。如果导入的模块的指定修订版不存在，则为错误。如果不存在“修订日期(`revision-data`)”子语句，则取决于所取模块的哪个版本。
+当存在可选的“`revision-date`”子语句时，本地模块中引用的任何`typedef`，分组(`grouping`)，扩展(`extension`)，特征(`feature`)和标识(`identity`)都将取自指定修订版本的被导入模块。如果指定的修订版本不存在，则会发生错误。如果不存在“修订日期(`revision-data`)”子语句，则使用哪个修定版本是未定义的。
 
-只要使用不同的前缀，可以导入同一模块的多个修订版本。
+使用不同的前缀，可以导入同一模块的多个修订版本。
 
 > `import`的子语句
 
@@ -161,19 +161,19 @@ module <module-name> {
 
 ### 7.1.5.1. import的“`revision-date`”声明
 
-导入的“修订日期(`revision-date`)”语句用于指定要导入的模块的版本。
+导入语句的“修订日期(`revision-date`)”子句用于指定要导入的模块的版本。
 
 ## 7.1.6. “`include`”声明
 
-“`include`”语句用于使子模块的内容可用于该子模块的父模块。参数是一个标识符，是要包含的子模块的名称。模块只允许包含属于该模块的子模块，如“`belongs-to`”语句所定义的（参见[第7.2.2节](7.2.md)）。
+“`include`”包含语句的作用是让父模块使用子模块的内容。参数是一个标识符，用来指定子模块的名称。模块只允许包含属于该模块的子模块，由子模块中的“`belongs-to`”语句所限定（参见[第7.2.2节](7.2.md)）。
 
 当模块包含子模块时，它将子模块的内容合并到模块的节点层次结构中。
 
 为了向后兼容`YANG`版本`1`，子模块允许包含属于同一个模块的另一个子模块，但在版本`1.1`（见[5.1节](../section-5/5.1.md)）中这不是必需的。
 
-当存在可选的“`revision-date`”子状态时，子模块的指定修订包含在模块中。如果子模块的指定修订版不存在，则是错误的。如果没有“`revision-date`”子语句，则不定义包含子模块的哪个版本。
+当存在可选的“`revision-date`”子语句时，使用指定修订版本的子模块。如果指定的修订版本子模块不存在，则会产生错误的。如果没有“`revision-date`”子语句，则包含哪个版本的子模块是未定义的。
 
-不得包含同一子模块的多个版本。
+禁止包含同一子模块的多个版本。
 
 > `include`的子语句
 
@@ -189,17 +189,17 @@ module <module-name> {
 
 ## 7.1.7. “`organization`”声明
 
-“组织”(`organization`)声明定义了对此模块负责的一方。 参数是一个字符串，用于指定由本模块开发的组织的文本描述。
+“组织”(`organization`)声明定义了对此模块的负责方。 参数是一个字符串，用于描述开发本模块的组织。
 
 
 ## 7.1.8. “`contact`”声明
 
-“联系”(`contact`)声明提供模块的联系信息。 参数是一个字符串，用于指定应该发送有关该模块的技术查询的人员的联系信息，如姓名，邮政地址，电话号码和电子邮件地址。
+“联系方式”(`contact`)声明提供模块的联系信息。 参数是一个字符串，用于指定该模块开发方的技术人员的联系信息，如姓名，邮政地址，电话号码和电子邮件地址。
 
 
 ## 7.1.9. “`revision`”声明
 
-“修订”(`revision`)语句指定模块的编辑修订历史，包括初始修订。 一系列“`revision`”语句详细说明了模块定义中的变化。 参数是格式为“`YYYY-MM-DD`”的日期字符串，后跟一个包含详细修订信息的子状态块。 一个模块应该至少有一个“`revision`”语句。 对于每个已发表的编辑变更，应在修订顺序前添加一个新的修订顺序，以便所有修订顺序都是相反的。
+“修订”(`revision`)语句指定模块的编辑修订历史，包括初始修订。 一系列“`revision`”语句详细说明了模块定义中的变化。 参数是格式为“`YYYY-MM-DD`”的日期字符串，后跟一个包含详细修订信息的子状态块。 一个模块应该至少有一个“`revision`”语句。 对于每次变更表布，应在最前面添加一个修改版本声明，以便所有修订声明是倒序的。
 
 ### 7.1.9.1.  `revision`的子语句
 
