--- a/section-7/7.2.md
+++ b/section-7/7.2.md
@@ -1,12 +1,12 @@
 # 7.2. “子模块”声明
 
-`YANG`中的主要单元是一个模块，而`YANG`模块本身可以由几个子模块构成。子模块允许模块设计人员将复杂模型拆分为多个子模块，其中所有子模块对包含子模块的模块定义的单个名称空间起作用。
+模块是`YANG`中组织模型的主要单元，而`YANG`模块本身可以由几个子模块构成。子模块允许模块设计人员将复杂模型拆分为多个组成部分，一个模块的所有子模块共享同一个名字空间，该名字空间在子模块所属的模块中定义。
 
-“`submodule`”语句定义子模块的名称，并将属于子模块的所有语句组合在一起。 “`submodule`”语句的参数是子模块的名称，后面跟着一个包含详细子模块信息的子语句块。子模块名称是一个标识符（见[第6.2节](../section-6/6.2.md)）。
+“`submodule`”语句定义子模块的名称，并将属于子模块的所有语句组合在一起。 “`submodule`”语句的参数是子模块的名称，后面跟着一个包含详细信息的子语句块。子模块名称是一个标识符（见[第6.2节](../section-6/6.2.md)）。
 
-`RFC`流发布的子模块的名称必须由`IANA`分配;参见[[RFC6020](https://tools.ietf.org/html/rfc6020)]中的[第14节](https://tools.ietf.org/html/rfc6020#section-14)。
+`RFC`工作流发布的子模块的名称必须由`IANA`分配;参见[[RFC6020](https://tools.ietf.org/html/rfc6020)]中的[第14节](https://tools.ietf.org/html/rfc6020#section-14)。
 
-私有子模块名称由拥有子模块的组织分配，没有中央注册表。有关如何命名子模块的建议，请参见[第5.1节](../section-5/5.1.md)。
+私有子模块名称由拥有子模块的组织分配，没有集中管理组织。有关如何命名子模块的建议，请参见[第5.1节](../section-5/5.1.md)。
 
 子模块通常具有以下布局：
 
@@ -78,7 +78,7 @@ submodule <module-name> {
 
 一个子模块只能被它所属的模块或属于该模块的另一个子模块所包含。
 
-强制的“`prefix`”子状态为子模块所属的模块分配一个前缀。 子模块所属模块中的所有定义及其所有子模块都可以使用前缀进行访问。
+强制的“`prefix`”子语句为子模块所属的模块分配一个前缀。 子模块所属模块中的所有定义及其所有子模块都可以使用前缀进行访问。
 
 > "belongs-to"的子语句
 
